# RoverArm

./: .gitmodules  CMakeLists.txt  README.md  package.xml
ArduinoCode/: ArduinoCode.ino  End_Effector.cpp  End_Effector.h  Linear_Actuator.cpp  Linear_Actuator.h  Stepper_Motor.cpp  Stepper_Motor.h
Arm_Frequency_Test_arduino/: Arm_Frequency_Test_arduino.ino
images/: Controller_layout.pptx
launch/: testing.launch  vision.launch
msg/: arm_velocity.msg  diagnostic.msg  joint_angles.msg  joint_enable.msg  joint_velocities.msg
msgs/: ArmSerial.msg
src/: Main Window.ui  direct_motor_control.cpp  inverse_kinematics.py  joy_teleop.cpp  main_window_gui.py  preprogramed_points.cpp  program_teleop.cpp
srv/: angles_to_points.srv  point_to_angle.srv
